Update vote change event

--- a/src/app/modules/home/components/food-vote-list/food-vote-list.component.html
+++ b/src/app/modules/home/components/food-vote-list/food-vote-list.component.html
@@ -4,6 +4,7 @@
       <li
         food-vote
         [foodVote]="foodVote"
+        (clickVoteEvent)="clickVote($event)"
         class="flex justify-between gap-x-6 py-5"
       ></li>
     }
