Add add-food component and food-service logic

--- a/src/app/modules/home/components/food-vote-list/food-vote-list.component.html
+++ b/src/app/modules/home/components/food-vote-list/food-vote-list.component.html
@@ -1,12 +1,10 @@
-<div class="container mx-auto">
-  <ul role="list" class="divide-y divide-gray-100">
-    @for (foodVote of foodVoteList; track $index) {
-      <li
-        food-vote
-        [foodVote]="foodVote"
-        (clickVoteEvent)="clickVote($event)"
-        class="flex justify-between gap-x-6 py-5"
-      ></li>
-    }
-  </ul>
-</div>
+<ul role="list" class="divide-y divide-gray-100">
+  @for (foodVote of foodVoteList; track $index) {
+    <li
+      home-food-vote
+      [foodVote]="foodVote"
+      (clickVoteEvent)="clickVote($event)"
+      class="flex justify-between gap-x-6 rounded-xl px-2 py-5 hover:bg-slate-100"
+    ></li>
+  }
+</ul>
