--- a/src/app/modules/home/components/add-food/add-food.component.html
+++ b/src/app/modules/home/components/add-food/add-food.component.html
@@ -1,44 +1,90 @@
-@if (isAdding) {
-  <input
-    type="text"
-    class="flex flex-grow appearance-none rounded-md px-4 text-slate-900 placeholder-slate-400 shadow-sm ring-1 ring-slate-200 focus:outline-none focus:ring-2 focus:ring-blue-500"
-    placeholder="Add food"
-    [(ngModel)]="foodName"
-  />
-  <button
-    (click)="addFood()"
-    type="submit"
-    class="ml-2 inline-flex items-center rounded-md bg-blue-500 px-4 py-2 text-center text-sm font-medium text-white hover:bg-blue-400"
+<button
+  (click)="modalService.open('modal-add-food')"
+  class="group ml-auto flex items-center rounded-lg bg-blue-700 px-4 py-2 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300"
+>
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 24 24"
+    fill="currentColor"
+    class="me-2 h-3.5 w-3.5 text-white"
   >
-    Submit
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 20 20"
-      fill="currentColor"
-      class="ms-2 h-3.5 w-3.5 text-white"
+    <path
+      fill-rule="evenodd"
+      d="M12 3.75a.75.75 0 01.75.75v6.75h6.75a.75.75 0 010 1.5h-6.75v6.75a.75.75 0 01-1.5 0v-6.75H4.5a.75.75 0 010-1.5h6.75V4.5a.75.75 0 01.75-.75z"
+      clip-rule="evenodd"
+    />
+  </svg>
+  New
+</button>
+
+<modal id="modal-add-food" class="hidden">
+  <div class="relative w-full rounded-lg bg-white shadow">
+    <div
+      class="flex items-center justify-between rounded-t border-b p-4 md:p-5"
     >
-      <path
-        d="M3.105 2.289a.75.75 0 00-.826.95l1.414 4.925A1.5 1.5 0 005.135 9.25h6.115a.75.75 0 010 1.5H5.135a1.5 1.5 0 00-1.442 1.086l-1.414 4.926a.75.75 0 00.826.95 28.896 28.896 0 0015.293-7.154.75.75 0 000-1.115A28.897 28.897 0 003.105 2.289z"
-      />
-    </svg>
-  </button>
-} @else {
-  <button
-    (click)="isAdding = true"
-    class="group ml-auto flex items-center rounded-md bg-blue-500 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-blue-400"
-  >
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-      fill="currentColor"
-      class="me-2 h-3.5 w-3.5 text-white"
-    >
-      <path
-        fill-rule="evenodd"
-        d="M12 3.75a.75.75 0 01.75.75v6.75h6.75a.75.75 0 010 1.5h-6.75v6.75a.75.75 0 01-1.5 0v-6.75H4.5a.75.75 0 010-1.5h6.75V4.5a.75.75 0 01.75-.75z"
-        clip-rule="evenodd"
-      />
-    </svg>
-    New
-  </button>
-}
+      <button
+        type="button"
+        (click)="modalService.close()"
+        class="ms-auto inline-flex h-8 w-8 items-center justify-center rounded-lg bg-transparent text-sm text-gray-400 hover:bg-gray-200 hover:text-gray-900"
+      >
+        <svg
+          class="h-3 w-3"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 14 14"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+          />
+        </svg>
+        <span class="sr-only">Close modal</span>
+      </button>
+    </div>
+    <form class="p-4 md:p-5" [formGroup]="foodForm" (submit)="addFood()">
+      <div class="mb-4 grid grid-cols-2 gap-4">
+        <div class="col-span-2">
+          <label
+            for="foodName"
+            class="mb-2 block text-sm font-medium text-gray-900"
+            >Food Name</label
+          >
+          <input
+            type="text"
+            name="foodName"
+            class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900"
+            placeholder="Type food name"
+            formControlName="foodName"
+          />
+        </div>
+      </div>
+      <button
+        type="submit"
+        [disabled]="foodForm.invalid"
+        class="inline-flex items-center rounded-lg bg-blue-700 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300"
+        [ngClass]="{
+          'cursor-not-allowed bg-blue-400': foodForm.invalid,
+          'hover:bg-blue-800': foodForm.valid
+        }"
+      >
+        <svg
+          class="-ms-1 me-1 h-5 w-5"
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+        Add new food
+      </button>
+    </form>
+  </div>
+</modal>
