--- a/src/app/home/components/add-food/add-food.component.html
+++ b/src/app/home/components/add-food/add-food.component.html
@@ -3,10 +3,10 @@
   class="group ml-auto flex items-center rounded-lg bg-blue-700 px-4 py-2 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300"
 >
   <svg
+    class="me-2 h-3.5 w-3.5 text-white"
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 24 24"
     fill="currentColor"
-    class="me-2 h-3.5 w-3.5 text-white"
   >
     <path
       fill-rule="evenodd"
@@ -17,15 +17,15 @@
   New
 </button>
 
-<modal id="modal-add-food" class="hidden">
+<modal class="hidden" id="modal-add-food">
   <div class="relative w-full rounded-lg bg-white shadow">
     <div
       class="flex items-center justify-between rounded-t border-b p-4 md:p-5"
     >
       <button
-        type="button"
         (click)="modalService.close()"
         class="ms-auto inline-flex h-8 w-8 items-center justify-center rounded-lg bg-transparent text-sm text-gray-400 hover:bg-gray-200 hover:text-gray-900"
+        type="button"
       >
         <svg
           class="h-3 w-3"
@@ -45,31 +45,31 @@
         <span class="sr-only">Close modal</span>
       </button>
     </div>
-    <form class="p-4 md:p-5" [formGroup]="foodForm" (submit)="addFood()">
+    <form (submit)="addFood()" [formGroup]="foodForm" class="p-4 md:p-5">
       <div class="mb-4 grid grid-cols-2 gap-4">
         <div class="col-span-2">
           <label
-            for="foodName"
             class="mb-2 block text-sm font-medium text-gray-900"
+            for="foodName"
             >Food Name</label
           >
           <input
+            class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900"
             type="text"
             name="foodName"
-            class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900"
             placeholder="Type food name"
             formControlName="foodName"
           />
         </div>
       </div>
       <button
-        type="submit"
         [disabled]="foodForm.invalid"
-        class="inline-flex items-center rounded-lg bg-blue-700 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300"
         [ngClass]="{
           'cursor-not-allowed bg-blue-400': foodForm.invalid,
-          'hover:bg-blue-800': foodForm.valid
+          'bg-blue-700 hover:bg-blue-800': foodForm.valid
         }"
+        class="inline-flex items-center rounded-lg px-5 py-2.5 text-center text-sm font-medium text-white focus:outline-none focus:ring-4 focus:ring-blue-300"
+        type="submit"
       >
         <svg
           class="-ms-1 me-1 h-5 w-5"
