--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div>
+  <core-navbar></core-navbar>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
