Get name and image url from store when adding food

--- a/src/app/features/home/components/food-vote-list/food-vote-list.component.html
+++ b/src/app/features/home/components/food-vote-list/food-vote-list.component.html
@@ -1,4 +1,4 @@
-<ul role="list" class="divide-y divide-gray-100">
+<ul class="divide-y divide-gray-100">
   @for (foodVote of foodVoteList; track $index) {
     <li
       (clickVoteEvent)="clickVote($event)"
