--- a/src/app/features/home/components/food-vote/food-vote.component.html
+++ b/src/app/features/home/components/food-vote/food-vote.component.html
@@ -35,7 +35,7 @@
   </div>
   <input
     (change)="clickVote()"
-    class="ml-auto"
+    class="ml-auto cursor-pointer"
     type="radio"
     name="food"
     title="food"
