Add logout on home and use store for updateFoodVote

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -7,3 +7,11 @@
   [foodVoteList]="foodVoteList"
   class="mx-auto block w-auto sm:max-w-sm md:max-w-md"
 />
+
+<button
+  (click)="logout()"
+  *ngIf="authService.hasValidAccessToken()"
+  class="rounded-lg bg-blue-700 px-4 py-2 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300"
+>
+  Logout
+</button>
