Hide navbar if not logged in

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div>
-  <core-navbar></core-navbar>
+  @if (isAuthenticated) {
+    <core-navbar></core-navbar>
+  }
   <main>
     <router-outlet></router-outlet>
   </main>
