Update foodVote interface and implementation

--- a/src/app/features/home/components/food-vote/food-vote.component.html
+++ b/src/app/features/home/components/food-vote/food-vote.component.html
@@ -1,40 +1,41 @@
 <div class="flex min-w-0 flex-grow basis-1/2 gap-x-4">
   <img
     class="h-12 w-12 flex-none rounded-full bg-gray-50"
-    src="{{ foodVote.submitterImageUrl }}"
+    src="{{ foodVote.createdByUser.imageUrl }}"
     alt=""
   />
   <div class="min-w-0 flex-auto">
     <p class="text-sm font-semibold leading-6 text-gray-900">
-      {{ foodVote.food }}
+      {{ foodVote.foodName }}
     </p>
     <p class="mt-1 truncate text-xs leading-5 text-gray-500">
-      {{ foodVote.submitterName }}
+      {{ foodVote.createdByUser.name }}
     </p>
   </div>
 </div>
 <div class="flex flex-grow basis-1/2 flex-row items-center">
   <div class="flex -space-x-2">
-    @for (liker of foodVote.likerImageUrls; track $index) {
+    @for (voter of foodVote.voters; track $index) {
       @if ($index < 5) {
         <img
           class="inline-block h-8 w-8 rounded-full ring-2 ring-white"
-          src="{{ liker }}"
+          src="{{ voter.imageUrl }}"
           alt=""
         />
       }
     }
 
-    @if (foodVote.likerImageUrls.length > 5) {
+    @if (foodVote.voters.length > 5) {
       <a
         class="flex h-8 w-8 items-center justify-center rounded-full bg-gray-700 text-xs font-medium text-white ring-2 ring-white hover:bg-gray-600"
         href=""
-        >+{{ foodVote.likerImageUrls.length - 5 }}</a
+        >+{{ foodVote.voters.length - 5 }}</a
       >
     }
   </div>
   <input
     (change)="clickVote()"
+    [checked]="isVoted"
     class="ml-auto cursor-pointer"
     type="radio"
     name="food"
