Add api integration with token

--- a/src/app/features/home/components/food-vote/food-vote.component.html
+++ b/src/app/features/home/components/food-vote/food-vote.component.html
@@ -9,7 +9,7 @@
       {{ foodVote.foodName }}
     </p>
     <p class="mt-1 truncate text-xs leading-5 text-gray-500">
-      {{ foodVote.createdByUser.name }}
+      {{ foodVote.createdByUser.displayName }}
     </p>
   </div>
 </div>
