--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -29,7 +29,7 @@
             tabindex="-1"
           >
             <p class="block px-4 py-2 text-sm text-gray-700">
-              {{ (user$ | async)!.name }}
+              {{ (user$ | async)!.displayName }}
             </p>
           </div>
         </div>
